<resources>
    <string name="app_name">Petite annonces</string>
    <string name="prix">Prix</string>
    <string name="titre">Titre</string>
    <string name="codepost">Code Postal</string>
    <string name="ville">Ville</string>
    <string name="descri">Description</string>
    <string name="date">Date</string>
    <string name="pseudo">Pseudo</string>
    <string name="tel">Telephone</string>
    <string name="email">E-mail</string>
    <string name="ImageDesc">Image caption</string>
    <string name="Email">Email</string>
    <string name="saveButton">Sauvegarder</string>
    <string name="deposer_annonce">Deposer une annonce</string>
    <string name="voir_annonce">Voir une annonce</string>
    <string name="liste_annonces">Liste des annonces</string>
    <string name="voir_pref">Mes préfèrences</string>
    <string name="favorite_non">Favorite=False</string>
    <string name="img">img de l\'annonce</string>
    <string name="save">Sauvegarder annonce</string>
    <string name="favorite">Fav</string>
    <string name="savedAnnonce">Annonces sauvegardées</string>
    <string name="annonces_mine">Mes annonces</string>
    <string name="voir_mine">Mes annonces</string>
    <string name="voir_saved">Annonces sauvegardées</string>
    <string name="modify">Modifier annonce</string>
    <string name="addPhoto">Ajouter une photo</string>
    <string name="delete">Supprimer l\'annonce</string>
    <string name="deletefromDB">Supprime de la DB</string>
    <string name="PasAnnonce">Pas d\'annonces sauvegardées</string>
    <string name="pasdePost">Pas d\'annonces postées</string>

</resources>
