<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titre"
        android:layout_width="318dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/titre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView

        android:id="@+id/scrollView"
        android:layout_width="206dp"
        android:layout_height="137dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/ImageDesc"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre"
        tools:srcCompat="@tools:sample/backgrounds/scenic[15]">


        <LinearLayout
            android:id="@+id/mygallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image1Gallery"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/img"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/image2Gallery"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/img"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/image3Gallery"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/img"
                android:visibility="visible" />


        </LinearLayout>




    </HorizontalScrollView>

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="207dp"
        android:text="@string/prix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre" />

    <TextView
        android:id="@+id/codepost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="207dp"
        android:text="@string/codepost"
        app:layout_constraintStart_toEndOf="@+id/prix"
        app:layout_constraintTop_toBottomOf="@+id/titre" />

    <TextView
        android:id="@+id/ville"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="207dp"
        android:text="@string/ville"
        app:layout_constraintStart_toEndOf="@+id/codepost"
        app:layout_constraintTop_toBottomOf="@id/titre" />

    <TextView
        android:id="@+id/descr"
        android:layout_width="354dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/descri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prix" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descr" />

    <TextView
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/pseudo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pseudo" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:onClick="onClick"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telephone" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3D5AFE"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>