<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre" />

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"

        tools:text="@string/prix">

    </TextView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:contentDescription="@string/img"
        android:visibility="visible"
        tools:srcCompat="@tools:sample/backgrounds/scenic[15]" />





</LinearLayout>