<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bAnnonce"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="106dp"
        android:text="@string/voir_annonce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bDeposer"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="109dp"
        android:text="@string/deposer_annonce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAnnonce" />

    <Button
        android:id="@+id/bListe"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="109dp"
        android:text="@string/liste_annonces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDeposer" />

    <Button
        android:id="@+id/bPref"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="109dp"
        android:text="@string/voir_pref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bListe" />

</android.support.constraint.ConstraintLayout>